[arx.monks.cloud] Updated news images, Implementation of redirects

--- a/arx.monks.cloud/src/data/news/2000-07-17.md
+++ b/arx.monks.cloud/src/data/news/2000-07-17.md
@@ -2,7 +2,7 @@
 title: DBG Fund sold Czech On Line at a record price
 date: 2000-07-17
 originalUrl: https://www.arxequity.com/5-2/
-image:
+image: news/2000-07-17.png
 ---
 
 The venture capital fund DBG Osteuropa- Holding has completed the sale of the Internet provider Czech On Line to the telecommunication operator Telekom Austria. Jaroslav Horák, Managing Director of DBG Eastern Europe, has informed about the transaction today.
