--- a/arx.monks.cloud/src/data/news/2003-01-28.md
+++ b/arx.monks.cloud/src/data/news/2003-01-28.md
@@ -2,7 +2,7 @@
 title: DBG Eastern Europe Announces first close of fund II
 date: 2003-01-28
 originalUrl: https://www.arxequity.com/arx-equity-partners-acquires-slovenian-healthcare-provider/
-image:
+image: news/2003-01-28.png
 ---
 
 DBG Eastern Europe’s second Central and Eastern European-focused private equity fund has completed a first closing at € 67 M. The fund’s second close will be completed later in the year, with targeted total commitments of € 80 M. DBG Eastern Europe II LP is the successor fund to the highly successful DBG Osteuropa-Holding GmbH, which has already returned nearly four times its original investor commitments. The first close of DBG Eastern Europe II LP has been completed with the unanimous backing of the predecessor fund’s limited partners: Deutsche Bank, EBRD, Mitsubishi Corporation and DEG.
