--- a/arx.monks.cloud/src/data/news/2003-08-27.md
+++ b/arx.monks.cloud/src/data/news/2003-08-27.md
@@ -2,7 +2,7 @@
 title: Management buy out of Ergis
 date: 2003-08-27
 originalUrl: https://www.arxequity.com/arx-equity-partners-acquires-slovenian-healthcare-provider-2/
-image:
+image: news/2003-08-27.png
 ---
 
 DBG Eastern Europe’s second Central and Eastern European – focused private equity fund has completed its first investment.
