--- a/arx.monks.cloud/src/data/news/2006-01-11.md
+++ b/arx.monks.cloud/src/data/news/2006-01-11.md
@@ -2,7 +2,7 @@
 title: DBG exchanges its participation in Flanco for shares in Flamingo
 date: 2006-01-11
 originalUrl: https://www.arxequity.com/3-2/
-image:
+image: news/2006-01-11.png
 ---
 
 Flamingo International has signed on 11th of January 2006, with Flanco Holding, the agreement for the acquisition of Flanco International SRL, one of the most important retailers of consumer electronics and white goods in Romania. The total transaction value will amount to approximately € 37 M. The Flamingo Group will thus become the second largest Romanian retailer of IT products, consumer electronics and white goods in terms of sales.
