--- a/arx.monks.cloud/src/data/news/2006-06-07.md
+++ b/arx.monks.cloud/src/data/news/2006-06-07.md
@@ -2,7 +2,7 @@
 title: DBG has indirectly sold its 17% shareholding in Eurofilms during its IPO
 date: 2006-06-07
 originalUrl: https://www.arxequity.com/dbg-has-indirectly-sold-its-17-shareholding-in-eurofilms-during-its-ipo/
-image:
+image: news/2006-06-07.png
 ---
 
 Finergis lnvestments, the holding company controlled by DBG Eastern Europe II, LP (“DBG”) has sold its 17% minority shareholding in Eurofilms SA, one of the largest producers of stretch films in Poland, during its recent IPO.
