--- a/arx.monks.cloud/src/data/news/2006-08-17.md
+++ b/arx.monks.cloud/src/data/news/2006-08-17.md
@@ -2,7 +2,7 @@
 title: DBG and 3TS acquire controlling interest in Polish children’s clothing retailer Komex
 date: 2006-08-17
 originalUrl: https://www.arxequity.com/dbg-and-3ts-acquire-controlling-interest-in-polish-childrens-clothing-retailer-komex/
-image:
+image: news/2006-08-17.png
 ---
 
 Komex Sp. z o.o. (“Komex” or “the Company”) – a chain of retail stores offering children clothing under the brand name “5.10.15” has been acquired by DBG Eastern Europe II LP (“DBG”) and 3TS Central European Fund II (“3TS”).
