--- a/arx.monks.cloud/src/data/news/2007-07-02.md
+++ b/arx.monks.cloud/src/data/news/2007-07-02.md
@@ -2,7 +2,7 @@
 title: "Companies controlled by DBG merged: Erigs S.A. and Eurofilms S.A"
 date: 2007-07-02
 originalUrl: https://www.arxequity.com/companies-controlled-by-dbg-merged-erigs-s-a-and-eurofilms-s-a/
-image:
+image: news/2007-07-02.png
 ---
 
 Merger of companies controlled by DBG Eastern Europe II LP: Ergis S.A. and Eurofilms S.A. (the latter quoted on the Warsaw Stock Exchange) is a fact. The Court registered the merger on 29 June. In effect it was created one of the largest plastic processing companies in Central Eastern Europe, with the total annual net revenue surpassing PLN 390 M.
