--- a/arx.monks.cloud/src/data/news/2007-07-06.md
+++ b/arx.monks.cloud/src/data/news/2007-07-06.md
@@ -2,7 +2,7 @@
 title: DBG acquires controlling interest in Slovenian plastic components producer Tomplast
 date: 2007-07-06
 originalUrl: https://www.arxequity.com/dbg-acquires-controlling-interest-in-slovenian-plastic-components-producer-tomplast/
-image:
+image: news/2007-07-06.png
 ---
 
 Slovenian plastic components producer, Tomplast d.o.o., has been acquired by DBG Eastern Europe II, LP (“DBG”). Tomplast is one of Slovenia’s leading manufacturers of plastic-moulded components.
