--- a/arx.monks.cloud/src/data/news/2008-02-07.md
+++ b/arx.monks.cloud/src/data/news/2008-02-07.md
@@ -2,7 +2,7 @@
 title: Axon Leasing and Finance Zrt. Attracts blue-chip investors
 date: 2008-02-07
 originalUrl: https://www.arxequity.com/axon-leasing-and-finance-zrt-attracts-blue-chip-investors/
-image:
+image: news/2008-02-07.png
 ---
 
 Axon Leasing and Financial Zrt. (“Axon” or the “Company”), the largest non-bank-owned leasing company in Hungary announced today that it has received equity funding from ARX (formerly branded as DBG Eastern Europe), a mid-market focused CEE private equity firm and 3i, the London FTS100 private equity fund, who acted through 3TS Capital Partners in the transaction. The investment was made through a Cyprus-domiciled investment vehicle. The investment, containing both a stock purchase as well as a substantial contribution to Axon’s share capital, totals € 9 M. In addition to this amount, the private equity investors earmarked € 6 million for further expansion in the future.
