--- a/arx.monks.cloud/src/data/news/2008-04-05.md
+++ b/arx.monks.cloud/src/data/news/2008-04-05.md
@@ -2,7 +2,7 @@
 title: ARX supports its portfolio company Tomplast in the add-on acquisition of Unitplast
 date: 2008-04-05
 originalUrl: https://www.arxequity.com/arx-supports-its-portfolio-company-tomplast-in-the-add-on-acquisition-of-unitplast/
-image:
+image: news/2008-04-05.png
 ---
 
 Funds managed by Arx Equity Partners (“ARX”) supported Tomplast d.o.o., a Slovenian plastic components producer, to perform an add-on acquisition of Unitplast d.o.o..
