--- a/arx.monks.cloud/src/data/news/2008-09-20.md
+++ b/arx.monks.cloud/src/data/news/2008-09-20.md
@@ -2,7 +2,7 @@
 title: ARX holds first close of ARX CEE III LP
 date: 2008-09-20
 originalUrl: https://www.arxequity.com/arx-holds-first-close-of-arx-cee-iii-lp/
-image:
+image: news/2008-09-20.png
 ---
 
 Arx Equity Partners (“ARX”) held the first close of its third dedicated Central and Eastern Europe focused lower mid-market fund at € 83 million. ARX is targeting € 125 million for the fund’s final close. ARX III’s largest first close commitments came from the European Bank for Reconstruction and Development, the European Investment Fund and Alpha CEE II (a fund managed by Alpha Associates).
