--- a/arx.monks.cloud/src/data/news/2008-10-26.md
+++ b/arx.monks.cloud/src/data/news/2008-10-26.md
@@ -2,7 +2,7 @@
 title: ARX acquires Lanex, Singing Rock and successfully exits Donit Tesnit
 date: 2008-10-26
 originalUrl: https://www.arxequity.com/arx-acquires-lanex-singing-rock-and-successfully-exits-donit-tesnit/
-image:
+image: news/2008-10-26.png
 ---
 
 Lanex / Singing Rock Acquisition:
