--- a/arx.monks.cloud/src/data/news/2009-03-06.md
+++ b/arx.monks.cloud/src/data/news/2009-03-06.md
@@ -2,7 +2,7 @@
 title: ARX acquires controlling stake in Kakadu
 date: 2009-03-06
 originalUrl: https://www.arxequity.com/arx-acquires-controlling-stake-in-kakadu/
-image:
+image: news/2009-03-06.png
 ---
 
 On March 6, 2009, ARX completed the acquisition of controlling stake in Kakadu Sp. z o.o. The investment is shared between the two funds managed by ARX: DBG Eastern Europe II LP and ARX CEE III LP.
