--- a/arx.monks.cloud/src/data/news/2009-04-23.md
+++ b/arx.monks.cloud/src/data/news/2009-04-23.md
@@ -2,7 +2,7 @@
 title: Professor Martin Filipec partners with ARX to acquire 100% of the Lexum Group
 date: 2009-04-23
 originalUrl: https://www.arxequity.com/professor-martin-filipec-partners-with-arx-to-acquire-100-of-the-lexum-group/
-image:
+image: news/2009-04-23.png
 ---
 
 On April 23, 2009, Professor Martin Filipec and ARX Equity Partners (“ARX”) completed the leveraged acquisition of 100% of the Lexum Group of companies (“Lexum”). Lexum is the leading network of private ophthalmology clinics in the Czech Republic.
