--- a/arx.monks.cloud/src/data/news/2009-10-08.md
+++ b/arx.monks.cloud/src/data/news/2009-10-08.md
@@ -2,7 +2,7 @@
 title: ARX completes € 102 M second close of ARX III
 date: 2009-10-08
 originalUrl: https://www.arxequity.com/arx-completes-e-102-m-second-close-of-arx-iii/
-image:
+image: news/2009-10-08.png
 ---
 
 Arx Equity Partners (“ARX”), the leading lower mid-market private equity firm focused on Central and Eastern Europe, has completed the € 102 M second close of its third fund, ARX III, on schedule to reach its € 125 M target. ARX III completed its € 83 M first close in October 2008 from a number of blue chip global financial institutions. ARX has been successfully investing in CEE since 1998.
