--- a/arx.monks.cloud/src/data/news/2010-01-21.md
+++ b/arx.monks.cloud/src/data/news/2010-01-21.md
@@ -2,7 +2,7 @@
 title: ARX supports its portfolio company Lexum in the acquisition of Intermedica
 date: 2010-01-21
 originalUrl: https://www.arxequity.com/arx-supports-its-portfolio-company-lexum-in-the-acquisition-of-intermedica/
-image:
+image: news/2010-01-21.png
 ---
 
 On January 21, 2010, the Lexum Group of companies, backed by ARX Equity Partners (“ARX”), completed the add-on acquisition of a 100% ownership interest in Intermedica. Intermedica was sold by Transmedica A/S. ARX has held a controlling stake in the Lexum Group since April 2009, when the company was acquired in partnership with the founder, Professor Martin Filipec.
