--- a/arx.monks.cloud/src/data/news/2010-09-04.md
+++ b/arx.monks.cloud/src/data/news/2010-09-04.md
@@ -2,7 +2,7 @@
 title: ARX acquires Krkonošské vápenky Kunčice a.s.
 date: 2010-09-04
 originalUrl: https://www.arxequity.com/arx-acquires-krkonosske-vapenky-kuncice-a-s/
-image:
+image: news/2010-09-04.png
 ---
 
 ARX Equity Partners (“ARX”) has completed a leveraged management buyout of a majority shareholding in Krkonošské vápenky Kunčice a.s. (“KVK”) and its subsidiary, Parabit Technologies s.r.o. (“Parabit”).
