--- a/arx.monks.cloud/src/data/news/2010-11-02.md
+++ b/arx.monks.cloud/src/data/news/2010-11-02.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners joins Benson Oak Capital as investor in Bochemie
 date: 2010-11-02
 originalUrl: https://www.arxequity.com/arx-equity-partners-joins-benson-oak-capital-as-investor-in-bochemie/
-image:
+image: news/2010-11-02.png
 ---
 
 Bohumín, 2nd November, 2010 – ARX Equity Partners, the CEE focused private equity investment firm, has joined current owner Benson Oak Capital as investor in the Bochemie Group, one of CEE‘s leading producers of household care products and a manufacturer of high value-added specialty chemicals. ARX will take a minority stake in the Group.
