--- a/arx.monks.cloud/src/data/news/2010-12-20.md
+++ b/arx.monks.cloud/src/data/news/2010-12-20.md
@@ -2,7 +2,7 @@
 title: ARX investment in CS Recycling
 date: 2010-12-20
 originalUrl: https://www.arxequity.com/arx-investment-in-cs-recycling/
-image:
+image: news/2010-12-20.png
 ---
 
 ARX Equity Partners, through a holding vehicle Finergis Investments Limited, has acquired 51% shareholding in CS Recycling Sp. z o.o.
