--- a/arx.monks.cloud/src/data/news/2011-06-28.md
+++ b/arx.monks.cloud/src/data/news/2011-06-28.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners acquires Manag
 date: 2011-06-28
 originalUrl: https://www.arxequity.com/arx-equity-partners-acquires-manag/
-image:
+image: news/2011-06-28.png
 ---
 
 ARX Equity Partners (“ARX”) has completed a management buy-in of a majority shareholdingin Manag a.s. (“Manag”).
