--- a/arx.monks.cloud/src/data/news/2012-12-17.md
+++ b/arx.monks.cloud/src/data/news/2012-12-17.md
@@ -2,7 +2,7 @@
 title: Moonray Healthcare acquires Lexum
 date: 2012-12-17
 originalUrl: https://www.arxequity.com/moonray-healthcare-acquires-lexum/
-image:
+image: news/2012-12-17.png
 ---
 
 Moonray Healthcare today announced the acquisition of Lexum – the market leading provider of ophthalmology in Czech Republic and Poland. The deal will see a phased transfer of ownership from current investors ARX Equity Partners and founder Professor Martin Filipec, who will remain with the group. Lexum operates 10 hospitals across Central Europe including the European Eye Centre, a new 2,500m2 flagship eye hospital in Prague. Moonray Healthcare intends to combine the group with Optegra®, it’s UK based eye hospital group which operates 11 specialist hospitals across England and Germany. Together the group will annually perform more than 40,000 surgical procedures and be one of the world’s largest providers of ophthalmology.
