--- a/arx.monks.cloud/src/data/news/2013-04-05.md
+++ b/arx.monks.cloud/src/data/news/2013-04-05.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners invests in Fincentrum a.s.
 date: 2013-04-05
 originalUrl: https://www.arxequity.com/arx-equity-partners-invests-in-fincentrum-a-s/
-image:
+image: news/2013-04-05.png
 ---
 
 ARX Equity Partners (“ARX”) completed the acquisition of a majority stake in Fincentrum a.s. alongside Capital Dynamics (independent global asset manager with USD 17 billion under management) and Lubor Žalman (former CEO of Raiffeisen Czech Republic). Fincentrum is one of the leading independent financial intermediaries (“IFA”) in the Czech Republic and Slovakia.
