--- a/arx.monks.cloud/src/data/news/2013-04-08.md
+++ b/arx.monks.cloud/src/data/news/2013-04-08.md
@@ -2,7 +2,7 @@
 title: Unilever Czech Republic acquires SAVO brand
 date: 2013-04-08
 originalUrl: https://www.arxequity.com/unilever-czech-republic-acquires-savo-brand/
-image:
+image: news/2013-04-08.png
 ---
 
 Unilever Czech Republic and the Bochemie company announced today that they have signed an agreement under which Unilever will acquire the SAVO and other consumer brands from Bochemie.
