--- a/arx.monks.cloud/src/data/news/2013-12-19.md
+++ b/arx.monks.cloud/src/data/news/2013-12-19.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners Fully Exits Ergis-Eurofilms
 date: 2013-12-19
 originalUrl: https://www.arxequity.com/arx-equity-partners-fully-exits-ergis-eurofilms/
-image:
+image: news/2013-12-19.png
 ---
 
 ARX Equity Partners (“ARX”) has fully exited its investment in Polish plastics processor, ERGIS-EUROFILMS S.A. (“Ergis”), generating an overall internal rate of return of over 33% and 4.5x cash-on-cash multiple. The ARX exit was executed via a series of block trades to investors on the Warsaw Stock Exchange in December 2013, which followed the partial realization of the Ergis investment in 2006.
