--- a/arx.monks.cloud/src/data/news/2014-02-10.md
+++ b/arx.monks.cloud/src/data/news/2014-02-10.md
@@ -2,7 +2,7 @@
 title: ARX and Darby acquire Gramex Kft.
 date: 2014-02-10
 originalUrl: https://www.arxequity.com/arx-and-darby-acquire-gramex-kft/
-image:
+image: news/2014-02-10.png
 ---
 
 ARX Equity Partners (“ARX”) and Darby Private Equity (“Darby”), the private equity arm of Franklin Templeton Investments, together with experienced food industry executive Gerard Lenihan, have completed the buyout of Gramex 2000 Kft. Financial details of the transaction were not disclosed.
