--- a/arx.monks.cloud/src/data/news/2014-08-21.md
+++ b/arx.monks.cloud/src/data/news/2014-08-21.md
@@ -2,7 +2,7 @@
 title: ARX acquires ANWIS Polska
 date: 2014-08-21
 originalUrl: https://www.arxequity.com/arx-acquires-anwis-polska/
-image:
+image: news/2014-08-21.png
 ---
 
 ARX Equity Partners (“ARX”), the lower mid-market buyout leader in Central and Eastern Europe, together with experienced executive Jacek Gromniak, have completed the MBI of ANWIS Polska Sp. z o.o. (“Anwis”). Financial details of the transaction, made by ARX CEE III LP, were not disclosed.
