--- a/arx.monks.cloud/src/data/news/2015-01-15.md
+++ b/arx.monks.cloud/src/data/news/2015-01-15.md
@@ -2,7 +2,7 @@
 title: ARX has completed the exit of its Kakadu investment
 date: 2015-01-15
 originalUrl: https://www.arxequity.com/arx-has-completed-the-exit-kakadu-investment/
-image:
+image: news/2015-01-15.png
 ---
 
 Placek Holding and Stephon Holdings Limited announced today the signing of an agreement according to which Super Zoo has acquired Kakadu. The transaction includes transfer of 100% of shares.
