--- a/arx.monks.cloud/src/data/news/2015-01-16.md
+++ b/arx.monks.cloud/src/data/news/2015-01-16.md
@@ -2,7 +2,7 @@
 title: ARX exits Lanex a.s.
 date: 2015-01-16
 originalUrl: https://www.arxequity.com/arx-exits-lanex-a-s/
-image:
+image: news/2015-01-16.png
 ---
 
 ARX Equity Partners (“ARX”) has completed the exit of its investment in Lanex a.s. (“Lanex”). Czech entrepreneur and industrialist, Rudolf Bochenek, acquired Lanex on November 18, 2014.
