--- a/arx.monks.cloud/src/data/news/2015-03-16.md
+++ b/arx.monks.cloud/src/data/news/2015-03-16.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners acquires Slovenian healthcare provider
 date: 2015-03-16
 originalUrl: https://www.arxequity.com/arx-equity-partners-acquires-slovenian-healthcare-provider-3/
-image:
+image: news/2015-03-16.png
 ---
 
 ARX Equity Partners (“ARX”) together with experienced healthcare investor Joseph Priel, completed the 100% buy-out of Slovenian healthcare services provider, Diagnosticni Center Bled doo (“DCB”; www.dc-bled.si). Details of the transaction were not disclosed.
