--- a/arx.monks.cloud/src/data/news/2015-11-09.md
+++ b/arx.monks.cloud/src/data/news/2015-11-09.md
@@ -2,7 +2,7 @@
 title: Brian Wardrop named Private Equity Professional of the last 20 years in Czech Republic
 date: 2015-11-09
 originalUrl: https://www.arxequity.com/brian-wardrop-named-private-equity-professional-of-the-last-20-years-in-czech-republic/
-image:
+image: news/2015-11-09.png
 ---
 
 On November 5, 2015, the Czech Private Equity and Venture Capital Association (CVCA) celebrated the 20th Anniversary of its foundation with a gala evening in Prague. We are pleased to announce that on this event Brian Wardrop, Managing Partner of ARX, was named as Private Equity Professional of the Last 20 years in the Czech Republic. This award resulted from a poll conducted by the CVCA where all members of the association participated. We are especially proud of the fact that our peers in the Czech private equity community have chosen to recognize the contributions of Brian, which we view as a positive reflection of the ARX market position and the firm’s dedication to Czech private equity.
