--- a/arx.monks.cloud/src/data/news/2016-07-11.md
+++ b/arx.monks.cloud/src/data/news/2016-07-11.md
@@ -2,7 +2,7 @@
 title: ARX CEE IV holds first close towards € 100 million target, supported by the EU COSME programme
 date: 2016-07-11
 originalUrl: https://www.arxequity.com/arx-cee-iv-holds-first-close-towards-e-100-million-target-supported-by-the-eu-cosme-programme/
-image:
+image: news/2016-07-11.png
 ---
 
 ARX Equity Partners (“ARX”), a leading lower mid-cap focused private equity firm operating in Central Europe, is pleased to announce the first closing of its fourth fund, ARX CEE IV (the “Fund”), at € 54 million, with total subscribed commitments of € 66 million.
