--- a/arx.monks.cloud/src/data/news/2017-01-31.md
+++ b/arx.monks.cloud/src/data/news/2017-01-31.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners acquires Czech baby food producer
 date: 2017-01-31
 originalUrl: https://www.arxequity.com/arx-equity-partners-acquires-czech-baby-food-producer/
-image:
+image: news/2017-01-31.png
 ---
 
 ARX Equity Partners (“ARX”) together with experienced food industry entrepreneur Keith Dilworth entered into a binding agreement relating to the acquisition of Nutricia Deva a.s. (“Deva”) from Danone Group.
