--- a/arx.monks.cloud/src/data/news/2017-09-05.md
+++ b/arx.monks.cloud/src/data/news/2017-09-05.md
@@ -2,7 +2,7 @@
 title: ARX portfolio company KVK Holding acquired by Sika
 date: 2017-09-05
 originalUrl: https://www.arxequity.com/arx-portfolio-company-kvk-holding-acquired-sika/
-image:
+image: news/2017-09-05.png
 ---
 
 ARX Equity Partners has entered into an agreement to exit portfolio company KVK via a sale to Sika AG. KVK operates six production sites in the Czech Republic – three for the manufacture of mortar products, two for bituminous membranes and one for expanded polystyrene insulation.
