--- a/arx.monks.cloud/src/data/news/2017-10-05.md
+++ b/arx.monks.cloud/src/data/news/2017-10-05.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners Exits KVK Holding
 date: 2017-10-05
 originalUrl: https://www.arxequity.com/arx-equity-partners-exits-kvk-holding/
-image:
+image: news/2017-10-05.png
 ---
 
 ARX Equity Partners (“ARX”) has exited its 2010 investment in Czech construction materials manufacturer, KVK Holding a.s. (“KVK”), while generating an overall 3.7x cash-on-cash return multiple and an IRR exceeding 20%. KVK operates six production sites in the Czech Republic – three for the manufacture of mortar products, two for bituminous membranes and one for expanded polystyrene insulation. KVK generated revenues of € 40 million in 2016.
