--- a/arx.monks.cloud/src/data/news/2018-04-03.md
+++ b/arx.monks.cloud/src/data/news/2018-04-03.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners Exits VUES
 date: 2018-04-03
 originalUrl: https://www.arxequity.com/arx-equity-partners-exits-vues/
-image:
+image: news/2018-04-03.png
 ---
 
 Following an approval by regulatory authorities, ARX Equity Partners (ARX) has completed the exit of its investment in Czech producer of specialized electrical motors VUES Brno s.r.o. (VUES) via a sale to Moog Inc. (NYSE:MOG.A) (NYSE:MOG.B) for a purchase price of € 53 million. The ARX investment into VUES generated an overall 11.8x cash-on-cash return multiple and an IRR of over 30%.
