--- a/arx.monks.cloud/src/data/news/2018-09-04.md
+++ b/arx.monks.cloud/src/data/news/2018-09-04.md
@@ -2,7 +2,7 @@
 title: ARX portfolio company Fincentrum acquired by the Swiss Life Group
 date: 2018-09-04
 originalUrl: https://www.arxequity.com/arx-portfolio-company-fincentrum-acquired-by-the-swiss-life-group/
-image:
+image: news/2018-09-04.png
 ---
 
 The transaction strengthens Swiss Life’s presence in this region and Swiss Life together with Fincentrum as a leading financial adviser in the Czech Republic and Slovakia.
