--- a/arx.monks.cloud/src/data/news/2018-10-22.md
+++ b/arx.monks.cloud/src/data/news/2018-10-22.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners completes sale of Fincentrum to Swiss Life
 date: 2018-10-22
 originalUrl: https://www.arxequity.com/arx-equity-partners-completes-sale-of-fincentrum-to-swiss-life/
-image:
+image: news/2018-10-22.png
 ---
 
 Further to regulatory approval, ARX Equity Partners / https://www.arxequity.com (“ARX”) has successfully completed the exit of its investment in Fincentrum / https://www.fincentrum.com,a leading, independent financial advisory business operating in the Czech Republic and Slovakia respectively.
