--- a/arx.monks.cloud/src/data/news/2019-04-01.md
+++ b/arx.monks.cloud/src/data/news/2019-04-01.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners completes acquisition of two Czech facades businesses
 date: 2019-04-01
 originalUrl: https://www.arxequity.com/arx-equity-partners-completes-acquisition-of-two-czech-facades-businesses/
-image:
+image: news/2019-04-01.png
 ---
 
 ARX Equity Partners (“ARX”) is delighted to today announce the completion of the majority acquisition of a leading Czech-based facades business, Fenestra Wieden (“Fenestra“), and simultaneous add-on purchase of Skanska’s Czech facades operation (now collectively rebranded as Fenestra henceforth).
