--- a/arx.monks.cloud/src/data/news/2019-04-25.md
+++ b/arx.monks.cloud/src/data/news/2019-04-25.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners wins the 2019 Central and Eastern Europe Deal of the Year Award
 date: 2019-04-25
 originalUrl: https://www.arxequity.com/arx-equity-partners-wins-the-2019-central-and-eastern-europe-deal-of-the-year-award/
-image:
+image: news/2019-04-25.png
 ---
 
 ARX Equity Partners won the Central and Eastern Europe Deal of the Year Award for VUES at the 2019 Real Deals Private Equity Awards ceremony, held in London on 24 April. 
