--- a/arx.monks.cloud/src/data/news/2019-06-18.md
+++ b/arx.monks.cloud/src/data/news/2019-06-18.md
@@ -2,7 +2,7 @@
 title: Warema files for approval to acquire Anwis
 date: 2019-06-18
 originalUrl: https://www.arxequity.com/warema-files-for-approval-to-acquire-anwis/
-image:
+image: news/2019-06-18.png
 ---
 
 Flarna Holdings Limited, controlled by a fund managed by ARX Equity Partners  (“ARX”), has entered into a binding agreement for the sale of Anwis Sp. z o.o. www.anwis.pl (“Anwis”) to Novaco Invest GmbH, a subsidiary of WAREMA Renkhoff SE. The transaction is subject to approval by competition protection authorities and its finalization is expected in approximately two months.
