--- a/arx.monks.cloud/src/data/news/2019-08-08.md
+++ b/arx.monks.cloud/src/data/news/2019-08-08.md
@@ -2,7 +2,7 @@
 title: Sava Re d.d. announces agreement to acquire Diagnostični center Bled d.o.o.
 date: 2019-08-08
 originalUrl: https://www.arxequity.com/sava-re-d-d-announces-agreement-to-acquire-diagnosticni-center-bled-d-o-o/
-image:
+image: news/2019-08-08.png
 ---
 
 Sava Re d.d. as buyer and Cinxro Holdings Ltd. (which is an affiliate of ARX CEE III LP) have entered into a contract under which Sava Re d.d. will acquire 80 percent of the share capital of the Slovenian company Diagnostični center Bled d.o.o. (“DC Bled”), representing 100 percent of voting rights. The completion of the transaction is subject to the fulfillment of certain suspensive conditions.
