--- a/arx.monks.cloud/src/data/news/2019-08-12.md
+++ b/arx.monks.cloud/src/data/news/2019-08-12.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners exits Anwis
 date: 2019-08-12
 originalUrl: https://www.arxequity.com/arx-equity-partners-exits-anwis/
-image:
+image: news/2019-08-12.png
 ---
 
 Following an approval by regulatory authorities, ARX Equity Partners (“ARX”) has completed an exit of its investment in Polish manufacturer of internal and external custom made sun shading systems Anwis Sp. z o.o. (“ANWIS”) via a sale to Novaco Invest GmbH, a subsidiary of WAREMA Renkhoff SE (“Warema”). The ARX investment into ANWIS generated an overall 3.3x cash-on-cash return multiple and an IRR of over 30%.
