--- a/arx.monks.cloud/src/data/news/2019-10-16.md
+++ b/arx.monks.cloud/src/data/news/2019-10-16.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners completes acquisition of Czech engineering business TES Vsetin
 date: 2019-10-16
 originalUrl: https://www.arxequity.com/arx-equity-partners-completes-acquisition-of-czech-engineering-business-tes-vsetin-2019-10-15/
-image:
+image: news/2019-10-16.png
 ---
 
 ARX Equity Partners (“ARX”) completed the majority acquisition of TES Vsetin (“TES“). Headquartered in Vsetin, Czech Republic. TES (http://www.tes.cz) is an engineering company engaged primarily in the manufacturing of system components related to electrical machines, in addition to the design and manufacturing of its own proprietary electric machines, such as generators and electric motors. TES supplies critical components and machines to several blue-chip customers across various industries. The company generated revenues of over € 60 million in 2018 and currently employs around 600 technically skilled staff.
