--- a/arx.monks.cloud/src/data/news/2020-03-26.md
+++ b/arx.monks.cloud/src/data/news/2020-03-26.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners Exits DC Bled for 3.6x
 date: 2020-03-26
 originalUrl: https://www.arxequity.com/arx-equity-partners-exits-dc-bled-for-3-6x/
-image: news/2020-03-26.jpg
+image: news/2020-03-26.png news/2020-03-26.jpg
 ---
 
 ARX Equity Partners (“ARX”), a private equity firm with a 20-year track record supporting the growth and development of mid-sized companies in Central Europe, has today completed the sale of its investment in Slovenian healthcare services provider, Diagnosticni Center Bled doo (“DCB”).
