--- a/arx.monks.cloud/src/data/news/2006-04-26.md
+++ b/arx.monks.cloud/src/data/news/2006-04-26.md
@@ -2,7 +2,7 @@
 title: DBG acquires controlling interest in VUES Brno
 date: 2006-04-26
 originalUrl: https://www.arxequity.com/4-2/
-image:
+image: news/2006-04-26.png
 ---
 
 Czech specialized electric motors manufacturer, VUES Brno a.s. (“VUES”), has been acquired by DBG Eastern Europe II, LP (“DBG”). On April 26, 2006, DBG completed an LBO of a 80% shareholding in VUES through takeover of VUES’ parent ES Brno, s.r.o. Two members of the VUES senior management team have partnered with DBG in the transaction. The transaction size was not disclosed.
