--- a/arx.monks.cloud/src/data/news/2016-04-18.md
+++ b/arx.monks.cloud/src/data/news/2016-04-18.md
@@ -2,7 +2,7 @@
 title: ARX exits Tomplast d.o.o.
 date: 2016-04-18
 originalUrl: https://www.arxequity.com/arx-exits-tomplast-d-o-o/
-image:
+image: news/2016-04-18.png
 ---
 
 ARX Equity Partners (“ARX”) has exited its 2007 investment in Slovenian producer of plastic components, Tomplast d.o.o. (“Tomplast”), and will generate an overall 4.1x cash-on-cash return multiple and an IRR exceeding 20%. The ARX exit was executed via a sale to funds managed by financial investor KJK Capital.
