--- a/arx.monks.cloud/src/data/news/2018-02-19.md
+++ b/arx.monks.cloud/src/data/news/2018-02-19.md
@@ -2,7 +2,7 @@
 title: Moog Announces Agreement to Acquire VUES
 date: 2018-02-19
 originalUrl: https://www.arxequity.com/moog-announces-agreement-acquire-vues/
-image:
+image: news/2018-02-19.png
 ---
 
 ARX Equity Partners and Moog Inc. (NYSE:MOG.A) (NYSE:MOG.B) have entered into a binding agreement for the sale of VUES Brno s.r.o. (“VUES”) to Moog. The transaction is subject to approval by competition protection authorities and its finalization is expected in approximately two months.
