--- a/arx.monks.cloud/src/data/news/2018-07-02.md
+++ b/arx.monks.cloud/src/data/news/2018-07-02.md
@@ -2,7 +2,7 @@
 title: ARX Equity Partners completes buyout of Hungarian mobile device repair business
 date: 2018-07-02
 originalUrl: https://www.arxequity.com/arx-equity-partners-completes-buyout-of-hungarian-mobile-device-repair-business/
-image:
+image: news/2018-07-02.png
 ---
 
 ARX Equity Partners (“ARX”) is delighted to announce the majority acquisition of TMX Mobile Solutions (“TMX“). Going forward, ARX will partner with the company’s senior management, who retain a significant minority stake as part of the deal.
