[arx.monks.cloud] Generate investments from data

--- a/arx.monks.cloud/src/data/investments/19.md
+++ b/arx.monks.cloud/src/data/investments/19.md
@@ -3,7 +3,7 @@ title: "Bochemie"
 country: Czech Republic 
 transaction: Buy and Build
 year: 2010
-status: Realised
+status: Realized
 business: "Household care and specialty chemicals"
 website: 
 ---
