--- a/arx.monks.cloud/src/data/investments/28.md
+++ b/arx.monks.cloud/src/data/investments/28.md
@@ -3,7 +3,7 @@ title: "Diagnostic Center Bled"
 country: Slovenia
 transaction: buy-and-build
 year: 2015
-status: Realised
+status: Realized
 business: "Diagnostic healthcare clinics operator"
 website: http://www.dc-bled.si
 ---
