Blockchain - new articles

--- a/blockchain.topmonks.com/src/data/articles/2020-05-31.md
+++ b/blockchain.topmonks.com/src/data/articles/2020-05-31.md
@@ -7,5 +7,4 @@ link: https://www.alza.cz/rakouska-skola-ekonomie-bitcoin
 picture: articles/2020-05-31.jpg
 ---
 
-Jaké jsou hlavní myšlenky rakouské školy a co má vlastně společného s Bitcoinem?
-
+Rakouská škola bývá mezi příznivci Bitcoinu často skloňována. Nejznámější propagátoři jako Saifedean Ammous či Stephan Livera se k “rakušanům” sami rádi hlásí. Jaké jsou hlavní myšlenky rakouské školy a co má vlastně společného s Bitcoinem?
